# Agos

./: .dockerignore  .env.example  .gitignore  AgentOS-Project-Overview.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  agentic-os-deployment.md  agentic-os-updated.md  agentos-feedback-and-guidance.md  agos-implementation-spec.md  audit-prompt.md  dev.sh  docker-compose.yml
.claude/: settings.json
crates/agentos-agent-tester/: Cargo.toml
crates/agentos-agent-tester/src/: auto_feedback.rs  feedback.rs  harness.rs  lib.rs  main.rs  report.rs
crates/agentos-agent-tester/src/scenarios/: agent_lifecycle.rs  audit_inspection.rs  error_handling.rs  file_io.rs  memory_rw.rs  mod.rs  permission_denial.rs  pipeline_exec.rs  secret_management.rs  tool_discovery.rs  web_ui.rs
crates/agentos-agent-tester/tests/: harness_boot_test.rs
crates/agentos-audit/: Cargo.toml
crates/agentos-audit/src/: log.rs
crates/agentos-bus/: Cargo.toml
crates/agentos-bus/src/: client.rs  lib.rs  message.rs  server.rs  tls_server.rs  transport.rs
crates/agentos-capability/: Cargo.toml
crates/agentos-capability/src/: engine.rs  lib.rs  permissions.rs  profiles.rs  token.rs
crates/agentos-cli/: Cargo.toml
crates/agentos-cli/src/: main.rs
crates/agentos-cli/src/commands/: agent.rs  audit.rs  bg.rs  channel.rs  cost.rs  escalation.rs  event.rs  hal.rs  healthz.rs  identity.rs  log.rs  mcp.rs  mod.rs  notifications.rs  perm.rs  pipeline.rs  resource.rs  role.rs  schedule.rs  scratchpad.rs  secret.rs  snapshot.rs  status.rs  task.rs  tool.rs  web.rs
crates/agentos-cli/tests/: common.rs  integration_test.rs  kernel_boot_test.rs  pipeline_test.rs  secrets_test.rs
crates/agentos-hal/: Cargo.toml
crates/agentos-hal/src/: hal.rs  lib.rs  registry.rs  types.rs
crates/agentos-hal/src/drivers/: gpu.rs  log_reader.rs  mod.rs  network.rs  process.rs  sensor.rs  storage.rs  system.rs  usb_storage.rs
crates/agentos-kernel/: Cargo.toml
crates/agentos-kernel/src/: agent_message_bus.rs  agent_registry.rs  background_pool.rs  config.rs  consolidation.rs  context.rs  context_compiler.rs  context_injector.rs  context_memory_store.rs  core_manifests.rs  cost_tracker.rs  episodic_memory.rs  escalation.rs  event_bus.rs  event_dispatch.rs  health.rs  health_monitor.rs  identity.rs  inbound_router.rs  injection_scanner.rs  intent_validator.rs  kernel.rs  kernel_action.rs  lib.rs  logging.rs  memory_blocks.rs  memory_extraction.rs  metrics.rs  network_safety.rs  notification_router.rs  otel_exporter.rs  rate_limit.rs  resource_arbiter.rs  retrieval_gate.rs  risk_classifier.rs  router.rs  rpc_manager.rs  run_loop.rs  schedule_manager.rs  scheduler.rs  (+14 more)
crates/agentos-kernel/src/adapters/: email.rs  mod.rs  ntfy.rs  telegram.rs
crates/agentos-kernel/src/commands/: agent.rs  audit.rs  background.rs  channel.rs  context_memory.rs  cost.rs  escalation.rs  event.rs  hal.rs  identity.rs  log.rs  mcp.rs  mod.rs  notification.rs  permission.rs  pipeline.rs  resource.rs  role.rs  schedule.rs  scratch.rs  secret.rs  system.rs  task.rs  tool.rs
crates/agentos-kernel/tests/: e2e.rs  security_acceptance_test.rs
crates/agentos-llm/: Cargo.toml
crates/agentos-llm/src/: anthropic.rs  custom.rs  fallback.rs  gemini.rs  lib.rs  mock.rs  ollama.rs  openai.rs  retry.rs  tool_helpers.rs  traits.rs  types.rs
crates/agentos-mcp/: Cargo.toml
crates/agentos-mcp/src/: adapter.rs  client.rs  handle.rs  lib.rs  server.rs  types.rs
crates/agentos-memory/: Cargo.toml
crates/agentos-memory/src/: embedder.rs  episodic.rs  lib.rs  procedural.rs  semantic.rs  types.rs
crates/agentos-pipeline/: Cargo.toml
crates/agentos-pipeline/src/: definition.rs  engine.rs  lib.rs  store.rs  types.rs
crates/agentos-registry/: Cargo.toml
crates/agentos-registry/src/: db.rs  handlers.rs  main.rs  models.rs
crates/agentos-sandbox/: Cargo.toml
crates/agentos-sandbox/src/: config.rs  executor.rs  filter.rs  landlock.rs  lib.rs  request.rs  result.rs
crates/agentos-scratch/: Cargo.toml
crates/agentos-scratch/src/: error.rs  graph.rs  lib.rs  links.rs  store.rs  types.rs
crates/agentos-sdk/: Cargo.toml
crates/agentos-sdk/src/: lib.rs
crates/agentos-sdk/tests/: tool_macro_test.rs
crates/agentos-tools/: Cargo.toml
crates/agentos-tools/src/: agent_call.rs  agent_list.rs  agent_manual.rs  agent_message.rs  agent_self.rs  archival_insert.rs  archival_search.rs  ask_user.rs  context_memory_read.rs  context_memory_update.rs  data_parser.rs  datetime.rs  episodic_list.rs  escalation_status.rs  factory.rs  file_delete.rs  file_diff.rs  file_editor.rs  file_glob.rs  file_grep.rs  file_lock.rs  file_move.rs  file_reader.rs  file_writer.rs  hardware_info.rs  http_client.rs  lib.rs  loader.rs  log_reader.rs  memory_block_delete.rs  memory_block_list.rs  memory_block_read.rs  memory_block_write.rs  memory_delete.rs  memory_read.rs  memory_search.rs  memory_stats.rs  memory_write.rs  network_monitor.rs  notify_user.rs  (+25 more)
crates/agentos-tools/tests/: http_client_test.rs  shell_exec_test.rs
crates/agentos-types/: Cargo.toml
crates/agentos-types/src/: agent.rs  agent_message.rs  agent_self.rs  capability.rs  channel.rs  context.rs  error.rs  event.rs  ids.rs  intent.rs  lib.rs  notification.rs  registry_query.rs  role.rs  schedule.rs  secret.rs  task.rs  task_trace.rs  tool.rs
crates/agentos-vault/: Cargo.toml
crates/agentos-vault/src/: crypto.rs  lib.rs  master_key.rs  vault.rs
crates/agentos-wasm/: Cargo.toml
crates/agentos-wasm/src/: lib.rs  wasm_tool.rs
crates/agentos-web/: Cargo.toml
crates/agentos-web/src/: auth.rs  chat_store.rs  csrf.rs  lib.rs  router.rs  server.rs  state.rs  templates.rs
crates/agentos-web/tests/: xss_tests.rs
sdk/python/: README.md  pyproject.toml
sdk/python/agentos/: __init__.py  agent.py  client.py  exceptions.py  notification.py  task.py  tool.py  types.py  types_generated.py
sdk/python/examples/: custom_tool.py  hello_agent.py  notification_inbox.py
sdk/python/scripts/: gen_types.py
sdk/python/tests/: test_agent.py  test_client.py  test_notifications.py  test_tool.py
(+619 files in other folders)
