[workspace]
resolver = "2"
members = [
    "crates/agentos-types",
    "crates/agentos-audit",
    "crates/agentos-vault",
    "crates/agentos-capability",
    "crates/agentos-bus",
    "crates/agentos-kernel",
    "crates/agentos-llm",
    "crates/agentos-tools",
    "crates/agentos-sandbox",
    "crates/agentos-wasm",
    "crates/agentos-cli",
    "crates/agentos-hal",
    "crates/agentos-memory",
    "crates/agentos-pipeline",
    "crates/agentos-sdk-macros",
    "crates/agentos-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agentos/agentos"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tempfile = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for Ollama adapter)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Regex
regex = "1"

# Web
axum = "0.8"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Misc
bytes = "1"
futures = "0.3"
async-trait = "0.1"
tokio-util = "0.7"
rpassword = "7"
libc = "0.2"

# WASM runtime
wasmtime = { version = "38", features = ["async", "cranelift"] }
wasmtime-wasi = "38"

# JSON Schema validation
jsonschema = "0.28"

# TLS
tokio-rustls = "0.26"
rustls-pemfile = "2"

# System info
sysinfo = "0.33"
