[package]
name = "agentos-agent-tester"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agent-tester"
path = "src/main.rs"

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-kernel = { path = "../agentos-kernel" }
agentos-llm = { path = "../agentos-llm" }
agentos-vault = { path = "../agentos-vault" }
agentos-tools = { path = "../agentos-tools" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
secrecy = "0.8"

[dev-dependencies]
serial_test = "3.4.0"
