[package]
name = "agentos-bus"
version.workspace = true
edition.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-audit = { path = "../agentos-audit" }
agentos-capability = { path = "../agentos-capability" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Optional TLS support for TCP transport
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[features]
default = []
tls = ["tokio-rustls", "rustls-pemfile"]

[dev-dependencies]
tempfile = "3.10"
