[package]
name = "agentos-capability"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
agentos-types = { path = "../agentos-types" }
agentos-vault = { path = "../agentos-vault" }
serde_json = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
