[package]
name = "agentos-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentctl"
path = "src/main.rs"

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-kernel = { path = "../agentos-kernel" }
agentos-sandbox = { path = "../agentos-sandbox" }
agentos-bus = { path = "../agentos-bus" }
agentos-hal = { path = "../agentos-hal" }
agentos-vault = { path = "../agentos-vault" }
agentos-tools = { path = "../agentos-tools" }
agentos-mcp = { path = "../agentos-mcp" }
agentos-web = { path = "../agentos-web" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
rpassword = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
agentos-audit = { path = "../agentos-audit" }
agentos-capability = { path = "../agentos-capability" }
agentos-llm = { path = "../agentos-llm" }
toml = { workspace = true }
serial_test = "3.4.0"
