[package]
name = "agentos-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sysinfo.workspace = true
regex.workspace = true
chrono.workspace = true
zbus = { workspace = true, optional = true }

[features]
default = []
usb-storage = ["dep:zbus"]
