[package]
name = "agentos-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-audit = { path = "../agentos-audit" }
agentos-vault = { path = "../agentos-vault" }
agentos-capability = { path = "../agentos-capability" }
agentos-bus = { path = "../agentos-bus" }
agentos-llm = { path = "../agentos-llm" }
agentos-tools = { path = "../agentos-tools" }
agentos-hal = { path = "../agentos-hal" }
agentos-sandbox = { path = "../agentos-sandbox" }
agentos-wasm = { path = "../agentos-wasm" }
agentos-memory = { path = "../agentos-memory" }
agentos-pipeline = { path = "../agentos-pipeline" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex = "1"
secrecy = "0.8"
rusqlite = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
cron = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
