[package]
name = "agentos-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-audit = { path = "../agentos-audit" }
agentos-mcp = { path = "../agentos-mcp" }
agentos-vault = { path = "../agentos-vault" }
agentos-capability = { path = "../agentos-capability" }
agentos-bus = { path = "../agentos-bus" }
agentos-llm = { path = "../agentos-llm" }
agentos-tools = { path = "../agentos-tools" }
agentos-hal = { path = "../agentos-hal" }
agentos-sandbox = { path = "../agentos-sandbox" }
agentos-wasm = { path = "../agentos-wasm" }
agentos-memory = { path = "../agentos-memory" }
agentos-pipeline = { path = "../agentos-pipeline" }
agentos-scratch = { path = "../agentos-scratch" }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex = "1"
unicode-normalization = { workspace = true }
secrecy = "0.8"
rusqlite = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
cron = { workspace = true }
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
jsonschema = { workspace = true }
tokio-util = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
percent-encoding = "2"
libc = { workspace = true }
futures = { workspace = true }
opentelemetry = { version = "0.28", optional = true, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.28", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", optional = true, features = ["grpc-tonic", "http-proto", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.28", optional = true }
tracing-opentelemetry = { version = "0.29", optional = true }

[features]
default = ["usb-storage"]
usb-storage = ["agentos-hal/usb-storage"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.4.0"
# agentos-audit is also a [dependencies] entry but integration tests in tests/
# compile as separate crates and need it explicitly listed here.
agentos-audit = { path = "../agentos-audit" }
agentos-llm = { path = "../agentos-llm" }
agentos-bus = { path = "../agentos-bus" }
toml = { workspace = true }
