[package]
name = "agentos-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) adapter — import external tool servers and export AgentOS tools via JSON-RPC 2.0"

[dependencies]
agentos-types  = { path = "../agentos-types" }
agentos-tools  = { path = "../agentos-tools" }
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
tokio          = { workspace = true }
async-trait    = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tokio-util     = { workspace = true }

[dev-dependencies]
tokio     = { workspace = true }
tempfile  = { workspace = true }
