[package]
name = "agentos-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
# Pinned to 4.x — upgrading to 5.x requires API migration and platform testing
# (5.x uses @pykeio/ort ONNX runtime which may increase binary size)
fastembed = "4"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
