[package]
name = "agentos-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
