[package]
name = "agentos-tools"
version.workspace = true
edition.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-bus = { path = "../agentos-bus" }
agentos-capability = { path = "../agentos-capability" }
agentos-hal = { path = "../agentos-hal" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream", "multipart"] }
futures-util = "0.3"
csv = "1.3.1"
rusqlite = { workspace = true, features = ["bundled", "vtab"] }
agentos-vault = { version = "0.1.0", path = "../agentos-vault" }
base64 = "0.22.1"
agentos-memory = { path = "../agentos-memory" }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
glob = "0.3"
regex = { workspace = true }
serde_yaml = { workspace = true }
quick-xml = "0.36"
html2text = "0.12"
similar = { version = "2", features = ["text"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
agentos-audit = { path = "../agentos-audit" }
tempfile = "3.26.0"
wiremock = "0.6"
serial_test = "3"
