[package]
name = "agentos-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true }
cron = { workspace = true }
thiserror = { workspace = true }
