[package]
name = "agentos-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentos-types = { path = "../agentos-types" }
agentos-tools = { path = "../agentos-tools" }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid = { workspace = true }
async-trait.workspace = true
