[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos-sdk"
version = "0.1.0"
description = "Python SDK for AgentOS — connect agents, run tasks, define tools"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agentos"]
